<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#00FFFF">

    <EditText
        android:id="@+id/homework_description_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/homework_title"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_week_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:text="@string/week"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/homework_description_frag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homework_description_frag" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_week_frag"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="120dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_confirm_frag"
        app:layout_constraintEnd_toEndOf="@+id/homework_description_frag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_week_frag"
        app:layout_constraintVertical_bias="0.487" />

    <TextView
        android:id="@+id/tv_day_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:text="@string/day"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/homework_description_frag"
        app:layout_constraintTop_toBottomOf="@id/homework_description_frag" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_day_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_cancel_frag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/homework_description_frag"
        app:layout_constraintTop_toBottomOf="@id/tv_day_frag" />

    <Button
        android:id="@+id/bt_cancel_frag"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_confirm_frag"/>

    <Button
        android:id="@+id/bt_confirm_frag"
        android:text="@string/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bt_cancel_frag"/>

</androidx.constraintlayout.widget.ConstraintLayout>